WIP - add clickable text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
   <script src="js/scripts.js"></script>
   <title>Flashcards</title>
 </head>
+
 <body>
-  
+  <div class="container">
+    <h1>Flashcards</h1> 
+    <div id="Javascript-hidden">
+      <p><span class="clickable">Javascript</span></p>
+    </div>
+    <div id="Javascript-shown">
+      <p><span class="clickable">object-oriented computer programming language commonly used to create interactive effects within web browsers</span></p>
+    </div>
+    <div id="Variables-hidden">
+      <p><span class="clickable">Variables</span></p>
+    </div>
+    <div id="Variables-shown">
+      <p><span class="clickable">definition</span></p>
+    </div>
+  </div>
 </body>
 </html>
