add clickable flashcards

--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
 <body>
   <div class="container">
     <h1>Flashcards</h1> 
-    <div id="Javascript-hidden">
-      <p><span class="clickable">Javascript</span></p>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">JavaScript</h5>
+        <p class="card-text">
+          <div id="Javascript-hidden">
+            <p><span class="clickable-1">Javascript</span></p>
+          </div>
+          <div id="Javascript-shown">
+            <p><span class="clickable-1">object-oriented computer programming language commonly used to create interactive effects within web browsers</span></p>
+          </div>
+        </p>
+      </div>
     </div>
-    <div id="Javascript-shown">
-      <p><span class="clickable">object-oriented computer programming language commonly used to create interactive effects within web browsers</span></p>
-    </div>
+
     <div id="Variables-hidden">
-      <p><span class="clickable">Variables</span></p>
+      <p><span class="clickable-2">Variables</span></p>
     </div>
     <div id="Variables-shown">
-      <p><span class="clickable">definition</span></p>
+      <p><span class="clickable-2">definition</span></p>
     </div>
   </div>
 </body>
